--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="total_tip">Total Tip</string>
     <string name="per_person">Per Person</string>
     <string name="save_payment">Save payment</string>
+    <string name="update_filter">Update filter</string>
     <string name="take_photo_of_receipt">Take photo of receipt</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
@@ -18,4 +19,10 @@
     <string name="delete_payments_success_message">Payments has been successfully removed!</string>
     <string name="no_items_found">No items found.</string>
     <string name="select_all">Select all</string>
+    <string name="filter">Filter</string>
+    <string name="sort_by">Sort by</string>
+    <string name="sort_date_ascending">Date ascending</string>
+    <string name="sort_date_descending">Date descending</string>
+    <string name="sort_payment_amount_ascending">Payment amount ascending</string>
+    <string name="sort_payment_amount_descending">Payment amount descending</string>
 </resources>
